Spacing issue.

--- a/css/online-extras.css
+++ b/css/online-extras.css
@@ -21,6 +21,7 @@
 .online-extras h3 {
 	font-size: 1.8em;
 	font-weight: normal;
+	margin: 15px 0;
 }
 .online-extras a {
 	color: #1a3863;
